syntax = "proto3";

package post;

service PostService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc GetPost(GetPostRequest) returns (PostResponse);
  rpc GetUserPosts(GetUserPostsRequest) returns (GetPostsResponse);
  rpc GetFeed(GetFeedRequest) returns (GetPostsResponse);
  rpc LikePost(LikePostRequest) returns (LikePostResponse);
  rpc UnlikePost(UnlikePostRequest) returns (UnlikePostResponse);
  rpc CreateComment(CreateCommentRequest) returns (CommentResponse);
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
  rpc GetReplies(GetRepliesRequest) returns (GetRepliesResponse);
  rpc GetPresignedUploadUrl(GetPresignedUploadUrlRequest) returns (GetPresignedUploadUrlResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc CheckUserLikedPosts(CheckUserLikedPostsRequest) returns (CheckUserLikedPostsResponse);
}

message CreatePostRequest {
  string user_id = 1;
  string content = 2;
  repeated string media_urls = 3;
}

message PostResponse {
  string id = 1;
  string user_id = 2;
  string content = 3;
  repeated string media_urls = 4;
  int32 likes_count = 5;
  int32 comments_count = 6;
  string created_at = 7;
}

message GetPostRequest {
  string post_id = 1;
}

message GetUserPostsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetFeedRequest {
  string user_id = 1;
  repeated string following_ids = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetPostsResponse {
  repeated PostResponse posts = 1;
  int32 total = 2;
  int32 page = 3;
}

message LikePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message LikePostResponse {
  bool success = 1;
  string message = 2;
}

message UnlikePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message UnlikePostResponse {
  bool success = 1;
  string message = 2;
}

message CreateCommentRequest {
  string post_id = 1;
  string user_id = 2;
  string content = 3;
  string parent_comment_id = 4; 
  repeated string mentions = 5;
}

message CommentResponse {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  string created_at = 5;
  string parent_comment_id = 6; 
  repeated string mentions = 7;
  int32 reply_count = 8; 
}

message GetCommentsRequest {
  string post_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetCommentsResponse {
  repeated CommentResponse comments = 1;
  int32 total = 2;
  int32 page = 3;
}

message GetRepliesRequest {
  string comment_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetRepliesResponse {
  repeated CommentResponse replies = 1;
  int32 total = 2;
  int32 page = 3;
}

message GetPresignedUploadUrlRequest {
  string file_name = 1;
  string content_type = 2;
}

message GetPresignedUploadUrlResponse {
  string upload_url = 1;
  string object_name = 2;
  string access_url = 3;
  bool success = 4;
}

message DeletePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message DeletePostResponse {
  bool success = 1;
  string message = 2;
}

message CheckUserLikedPostsRequest {
  string user_id = 1;
  repeated string post_ids = 2;
}

message CheckUserLikedPostsResponse {
  map<string, bool> liked_posts = 1; 
}

